# a2a-demo

./: README.md  pyproject.toml
src/a2a_demo/: __init__.py  agent.py  math_agent.py  math_task_manager.py  task_manager.py
