[project]
name = "a2a-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hedonwang", email = "171725713@qq.com" }]
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "google-a2a",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.1",
]

[project.scripts]
a2a-demo = "a2a_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A.git", subdirectory = "samples/python" }
google-a2a = { git = "https://github.com/djsamseng/A2A.git", subdirectory = "samples/python", rev = "prefixPythonPackage" }
